fxi(): mobile responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="icon"
+      href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/favicon.ico"
+    />
 
-    <link rel="icon" href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/favicon.ico">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      sizes="16x16"
+      href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/favicon.ico"
+    />
 
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/apple-touch-icon.png"
+    />
 
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/favicon.ico">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/android-chrome-512x512.png"
+    />
 
-
-    <link rel="apple-touch-icon" sizes="57x57" href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/apple-touch-icon.png">
-
-
-    <link rel="icon" type="image/png" sizes="192x192" href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="https://d2k5m0tntfs5ke.cloudfront.net/favicons/android-chrome-512x512.png">
-
-    <title>Deluxe Caravans - Experience Australia Like Never Before With Our Off-Grid Caravans. Create Memories That Last A Lifetime.</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Experience Australia Like Never Before. Our Caravans Allow You and Family to Explore Infinite Possibilities. Reconnect and Rejoice with your Loved Ones by Creating Memories of a Lifetime.">
-    <meta name="keywords" content="caravans, RVs, travel trailers, camping, outdoor living, caravan sales, caravan rental, adventure travel, recreational vehicles, luxury caravans, caravan models, caravan dealers">
-    <meta name="author" content="Pixvo">
-    <meta property="og:title" content="Deluxe Caravans - Your Gateway to Adventure">
+    <title>
+      Deluxe Caravans - Experience Australia Like Never Before With Our Off-Grid
+      Caravans. Create Memories That Last A Lifetime.
+    </title>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:description" content="Experience Australia Like Never Before. Our Caravans Allow You and Family to Explore Infinite Possibilities. Reconnect and Rejoice with your Loved Ones by Creating Memories of a Lifetime.">
-    <meta property="og:image" content="https://d2k5m0tntfs5ke.cloudfront.net/favicons/logo.png">
-    <meta property="og:url" content="https://deluxecaravans.com.au">
-    <meta name="robots" content="index, follow">
+    <meta
+      name="description"
+      content="Experience Australia Like Never Before. Our Caravans Allow You and Family to Explore Infinite Possibilities. Reconnect and Rejoice with your Loved Ones by Creating Memories of a Lifetime."
+    />
+    <meta
+      name="keywords"
+      content="caravans, RVs, travel trailers, camping, outdoor living, caravan sales, caravan rental, adventure travel, recreational vehicles, luxury caravans, caravan models, caravan dealers"
+    />
+    <meta name="author" content="Pixvo" />
+    <meta
+      property="og:title"
+      content="Deluxe Caravans - Your Gateway to Adventure"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      property="og:description"
+      content="Experience Australia Like Never Before. Our Caravans Allow You and Family to Explore Infinite Possibilities. Reconnect and Rejoice with your Loved Ones by Creating Memories of a Lifetime."
+    />
+    <meta
+      property="og:image"
+      content="https://d2k5m0tntfs5ke.cloudfront.net/favicons/logo.png"
+    />
+    <meta property="og:url" content="https://deluxecaravans.com.au" />
+    <meta name="robots" content="index, follow" />
     <script src="https://player.vimeo.com/api/player.js"></script>
-    
   </head>
   <body>
     <div id="root"></div>
-    
-    <!-- Podium Widget Script -->
-    <script>
-      !function(t,e,n,s,a,c,i,o,p){t.PodiumWebChat=a,t[a]=t[a]||function(){(t[a].q=t[a].q||[]).push(arguments)},t[a].l=1*new Date,c=e.createElement(n),i=e.getElementsByTagName(n)[0],c.async=1,c.src=s,i.parentNode.insertBefore(c,i)}(window,document,"script","https://connect.podium.com/widget.js","PodiumWebChat");
-      PodiumWebChat('init', {
-        "organizationToken": "cf270be8-0d54-4e1f-94e3-8b6e41f2d003"
-      });
-    </script>
+    <script
+      defer
+      src="https://connect.podium.com/widget.js#ORG_TOKEN=cf270be8-0d54-4e1f-94e3-8b6e41f2d003"
+      id="podium-widget"
+      data-organization-api-token="cf270be8-0d54-4e1f-94e3-8b6e41f2d003"
+    ></script>
   </body>
 </html>
